syntax = "proto3";
package api;

import "status.proto";
import "google/protobuf/timestamp.proto";

message MsgReq{
    string id = 1;
    repeated string text = 2;
    repeated bytes pic = 3;
    string parentId = 4;
    string topic = 5;
    google.protobuf.Timestamp time_name = 6;
}


message MsgResp{
    string id = 1;
    Status status = 2;
}


service Maestro {
    rpc Chatt(stream MsgReq) returns (stream MsgResp);
}
